--- a/modulo 3/pacote-d012/imagens/style.css
+++ b/modulo 3/pacote-d012/imagens/style.css
@@ -1,27 +1,35 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@1&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poltawski+Nowy:ital,wght@1,700&display=swap');
 
 :root {
-    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
-    --fonte2: 'Instrument Serif', serif;
+      --fonte1:'Poltawski Nowy', serif;
+     --fonte2: 'Fjalla One', sans-serif;
+    --fonte3: 'Instrument Serif', serif;
+ 
+    
 }
 *{
+   
     margin: 0px;
     padding: 0px;
     
 }
 html , body{
     min-height: 100vh;
-    background-color: aqua;
+    background-color: aqua; 
+    font-family: var(--fonte1);
+
+   
 }header{
     background-color: black;
     color: white;
     text-align: center;
 }header > h1{
+    font-family: var(--fonte2);
+    font-size: 4.5vw;
     padding-top: 5px;
     font-variant: small-caps;
 }a{
@@ -38,22 +46,47 @@ html , body{
     padding-bottom: 10vh;
     line-height: 2m;
     padding-left: 30px;
+    font-size: 3.5vw;
    
+}
+section > p{
+padding-bottom: 2em;
 }
  section.normal{
     background-color: blueviolet;
 }section.imagem{
-    background-color: rgb(45, 42, 42);;
+    background-color: rgba(36, 32, 32, 0.341);;
     color: rgb(255, 255, 255);
+    font-family: var(--fonte3);
+
+    
 
 }section.imagem > p{
-    width: 460px;
-    background-color: rgb(84, 84, 84);
+    display: inline-block; 
+    padding: 20px;
+    font-size: 3.5vw;
+    background-color: rgba(84, 84, 84, 0.411);
+    border-radius: 30px;
+    color: rgb(255, 255, 255);
+    
+    
+}section#img01{
+background-image: url(background001.jpg);
+background-position: center center ;
+background-attachment: fixed;
+background-size: cover;
+}section#img02{
+background-image: url(background002.jpg);
+background-position: center;
+background-attachment: fixed;
+background-size: cover;
+
 }
 footer{
     background-color: black;
     text-align: center;
     padding: 10px;
     color: rgb(10, 170, 26);
+    font-family:var(--fonte2);
 
 }
